--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="card">
              
-            <a href="Folder animations/index.html"><img src="data/folder.jpeg" alt="folder"><h3>Folder Hover Animations</h3></a>
+            <a href="movie booking/index.html"><img src="data/movie.jpeg" alt="movie"><h3>Movie Booking</h3></a>
         </div>
      </div>
      <div class="container row2">
