--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <div class="container row2">
         <div class="card">
              
-            <a href="Folder animations/index.html"><img src="data/folder.jpeg" alt="folder"><h3>Folder Hover Animations</h3></a>
+            <a href="exchange rate calci/index.html"><img src="data/exchange.jpeg" alt="folder"><h3>Exchange Rate Calculator</h3></a>
         </div>
         <div class="card">
              
