--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="card">
              
-            <a href="Folder animations/index.html"><img src="data/folder.jpeg" alt="folder"><h3>Folder Hover Animations</h3></a>
+            <a href="template-1/index.html"><img src="data/template-1.jpg" alt="folder"><h3>Template</h3></a>
         </div>
      </div>
 
